knife_project broken #58625

Closed
opened 2018-12-03 17:12:35 +01:00 by stephen leger · 9 comments
Member

System Information
Operating system: Mint 18
Graphics card: Nvidia 1070

Blender Version
Broken: 2.8
Worked: 2.79

Short description of error
knife_project()
lead into RuntimeError: Error: No other selected objects found to use for projection

Exact steps for others to reproduce the error
Create a plane,
create a Bezier Circle
Select circle and then make plane active object.
Turn into edit mode
F3 + Knife project

  • RuntimeError: Error: No other selected objects found to use for projection.

**System Information** Operating system: Mint 18 Graphics card: Nvidia 1070 **Blender Version** Broken: 2.8 Worked: 2.79 **Short description of error** knife_project() lead into RuntimeError: Error: No other selected objects found to use for projection **Exact steps for others to reproduce the error** Create a plane, create a Bezier Circle Select circle and then make plane active object. Turn into edit mode F3 + Knife project - > RuntimeError: Error: No other selected objects found to use for projection.
Author
Member

Added subscriber: @StephenLeger

Added subscriber: @StephenLeger
Member

Added subscribers: @dfelinto, @JacquesLucke

Added subscribers: @dfelinto, @JacquesLucke
Member

Can confirm it. I'm wildly guessing here, is this related to multi object editing? @dfelinto

Can confirm it. I'm wildly guessing here, is this related to multi object editing? @dfelinto
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou
Member

I believe this is related to #56948

I believe this is related to #56948
Member

Added subscribers: @ideasman42, @pablovazquez

Added subscribers: @ideasman42, @pablovazquez
Member

Confirmed it still happens in the latest master. It being a multi-object/mesh issue maybe more related to @ideasman42 to look at later on?

Confirmed it still happens in the latest master. It being a multi-object/mesh issue maybe more related to @ideasman42 to look at later on?

This issue was referenced by 351b24ac14

This issue was referenced by 351b24ac142d8f3b8f067b004e055018399eb469

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58625
No description provided.