Fix T58625: Knife project fails w/ curves