source/blender/editors/mesh/editmesh_knife_project.c
@@ -69,7 +69,8 @@ static LinkNode *knifeproject_poly_from_object(const bContext *C, Scene *scene, 
 		me_eval_needs_free = false;
 	}
 	else if (ELEM(ob->type, OB_FONT, OB_CURVE, OB_SURF)) {
-		me_eval = BKE_mesh_new_nomain_from_curve(ob);
+		Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob);
+		me_eval = BKE_mesh_new_nomain_from_curve(ob_eval);
 		me_eval_needs_free = true;
 	}
 	else {
